Merged with latest changes from stefant; some additional work on the device profiles.